 * integrated fix (https://github.com/icing/mod_h2/pull/5) from 
   Jonathan (invader444) to fix chunked encoding when converting http/1
   responses to http2 unchunked data.

v0.2.1
--------------------------------------------------------------------------------
 * changed apr_pool usage to have more recycling, 50% performance increase in 
   loadtest
 * added hack to enable mod_h2 to run in mpm_event (experimental)
 * changed internal stream/data lookup from O(n/2) to O(log(n)) time
 * fixed index in http2 to http1 header conversion leading to segfaults
 * update openssl version downloaded for sandbox
 * using sha256 for self-signed sandbox certificates
 * sandbox certificate no longer announces itself as roo
   (last 3 thanks to michael.koeller at greenbytes.de)

v0.2.0
--------------------------------------------------------------------------------
 * merged pull request from Tatsuhiro Tsujikawa, removing code for CONTINUATION
   frames that are never seen by mod_h2
 * request/response headers are filtered when converting between HTTP/1.1 and
   HTTP/2 where they can only do harm (Expect/Connection/etc.)
 * added test cases for uploads
 * fixed handling of uploads ;-)
 * enabled h2c upgrade for "OPTIONS *" requests
 * changed h2_stream_set implementation to use sorted apr array
 * switched to nghttp2 v0.7.7 in sandbox

v0.1.1
--------------------------------------------------------------------------------
 * added cgi test cases (needs python installed)
 * fixed typo in configure.ac that did not set the CPP flags correctly (#3)
 * fixed handling of chunked encoding in responses
 * merged header macro pull request from MATSUMOTO, Ryosuke

v0.1.0
--------------------------------------------------------------------------------
 * first alpha release, see README on how to use it and what is all missing
 * h2 supported with openssl > 1.0.1 and patched mod_ssl (patch included and used in sandbox)
 * h2c supported
 * only usable in mpm_worker right now